# ingresso.com

./: .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: python-package.yml
ingresso/: __init__.py  ingresso.py
tests/: test_ingresso.py
