[tool.poetry]
name = "ingresso"
version = "0.1.3"
description = "A wrapper python para o ingresso.com"
authors = ["Hudson Brendon <contato.hudsonbrendon@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hudsonbrendon/ingresso.com"
homepage = "https://github.com/hudsonbrendon/ingresso.com#readme"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[settings]
known_third_party = ["pytest", "requests"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"